--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-Hi!Show! IRC Gateway
- Hig is an IRC bot to share messages between 2 IRCs.
+#Hi!Show! IRC Gateway
+Hig is an IRC bot to share messages between 2 IRCs.
